chore: update ike-maven-plugin to v44 and document jvm.config
- Bump ike-maven-plugin version from 43 to 44
- Add documentation for .mvn/jvm.config configuration
- Document standard JVM flag for suppressing GraalVM warnings
- Note that ike:init generates jvm.config automatically